Fix: Added _redirects and overflow bug patch

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,13 @@
   text-shadow: none !important;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
